--- a/db_research/vertica/vertica.ipynb
+++ b/db_research/vertica/vertica.ipynb
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c889121",
+   "id": "d9a0d372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "edccd275",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "b45d2a67",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,18 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "f3b486e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import vertica_python\n",
-    "import os"
+    "import vertica_python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "id": "a0cb5ebd",
    "metadata": {},
    "outputs": [],
@@ -95,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b9bab5aa",
+   "execution_count": 3,
+   "id": "332cb58d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,19 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "id": "b5ae920b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<vertica_python.vertica.cursor.Cursor at 0x23bffd18100>"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "DuplicateObject",
+     "evalue": "Severity: ROLLBACK, Message: Object \"movie_view\" already exists, Sqlstate: 42710, Routine: outputAlreadyExistsEreport, File: /data/qb_workspaces/jenkins2/ReleaseBuilds/Grader/REL-9_2_0-x_grader/build/vertica/Commands/DDL.cpp, Line: 22038, Error Code: 4213, SQL: 'CREATE TABLE movie_view (     id IDENTITY, user_uuid VARCHAR(256), movie_uuid VARCHAR(256), movie_progress VARCHAR(256), movie_length VARCHAR(256), event_time VARCHAR(256)); '",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mDuplicateObject\u001b[0m                           Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mCREATE TABLE movie_view (\u001b[39;49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124;43m    id IDENTITY, user_uuid VARCHAR(256), movie_uuid VARCHAR(256), movie_progress VARCHAR(256), movie_length VARCHAR(256), event_time VARCHAR(256));\u001b[39;49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mE:\\py\\analytics_service\\venv\\lib\\site-packages\\vertica_python\\vertica\\cursor.py:235\u001b[0m, in \u001b[0;36mCursor.execute\u001b[1;34m(self, operation, parameters, use_prepared_statements, copy_stdin, buffer_size)\u001b[0m\n\u001b[0;32m    233\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m parameters:\n\u001b[0;32m    234\u001b[0m         operation \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mformat_operation_with_parameters(operation, parameters)\n\u001b[1;32m--> 235\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execute_simple_query\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    237\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
+      "File \u001b[1;32mE:\\py\\analytics_service\\venv\\lib\\site-packages\\vertica_python\\vertica\\cursor.py:632\u001b[0m, in \u001b[0;36mCursor._execute_simple_query\u001b[1;34m(self, query)\u001b[0m\n\u001b[0;32m    630\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_message \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconnection\u001b[38;5;241m.\u001b[39mread_message()\n\u001b[0;32m    631\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_message, messages\u001b[38;5;241m.\u001b[39mErrorResponse):\n\u001b[1;32m--> 632\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m errors\u001b[38;5;241m.\u001b[39mQueryError\u001b[38;5;241m.\u001b[39mfrom_error_response(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_message, query)\n\u001b[0;32m    633\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_message, messages\u001b[38;5;241m.\u001b[39mRowDescription):\n\u001b[0;32m    634\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdescription \u001b[38;5;241m=\u001b[39m [Column(fd, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39municode_error) \u001b[38;5;28;01mfor\u001b[39;00m fd \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_message\u001b[38;5;241m.\u001b[39mfields]\n",
+      "\u001b[1;31mDuplicateObject\u001b[0m: Severity: ROLLBACK, Message: Object \"movie_view\" already exists, Sqlstate: 42710, Routine: outputAlreadyExistsEreport, File: /data/qb_workspaces/jenkins2/ReleaseBuilds/Grader/REL-9_2_0-x_grader/build/vertica/Commands/DDL.cpp, Line: 22038, Error Code: 4213, SQL: 'CREATE TABLE movie_view (     id IDENTITY, user_uuid VARCHAR(256), movie_uuid VARCHAR(256), movie_progress VARCHAR(256), movie_length VARCHAR(256), event_time VARCHAR(256)); '"
+     ]
     }
    ],
    "source": [
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "id": "066fb956",
    "metadata": {},
    "outputs": [],
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "id": "195c39b1",
    "metadata": {},
    "outputs": [],
@@ -165,47 +167,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "id": "f829e923",
    "metadata": {},
    "outputs": [],
    "source": [
     "length = random.randint(600, 90000)\n",
     "movies_gen = ((\n",
-    "    random.choice(user_uuids), random.choice(movie_uuids), str(random.randint(0, length)), str(length), str(datetime.datetime.now())) for _ in range(10000000)\n",
+    "    random.choice(user_uuids), random.choice(movie_uuids), str(random.randint(0, length)), str(length), str(datetime.datetime.now())) for _ in range(10_000_000)\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4030d183",
+   "id": "68cbbe8e",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
     "step = 10000\n",
-    "for i in range(0, 100):\n",
-    "    movies = [next(movies_gen) for _ in range(step)]\n",
+    "for _ in range(100):\n",
     "    cursor.executemany(\"\"\"INSERT INTO movie_view (\n",
-    "    user_uuid, movie_uuid, movie_progress, movie_length, event_time) VALUES (?, ?, ?, ?, ?)\"\"\", movies, use_prepared_statements=True) \n"
+    "                       user_uuid, movie_uuid, movie_progress, movie_length, event_time)\n",
+    "                       VALUES (?, ?, ?, ?, ?)\"\"\",\n",
+    "                       [next(movies_gen) for _ in range(step)],\n",
+    "                       use_prepared_statements=True) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c42acb98",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<vertica_python.vertica.cursor.Cursor at 0x1de583eb220>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "connection.rollback()\n",
+    "cursor.execute('SELECT COUNT(*) from movie_view')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fcc4d234",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[60000]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9e0f5f7",
+   "metadata": {},
+   "source": [
+    "За час на одном потоке было загружено 60000 записей"
+   ]
   }
  ],
  "metadata": {
