--- a/db_research/vertica/vertica.ipynb
+++ b/db_research/vertica/vertica.ipynb
@@ -10,10 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d9a0d372",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: vertica-python in d:\\anaconda3\\lib\\site-packages (1.0.5)\n",
+      "Requirement already satisfied: six>=1.10.0 in d:\\anaconda3\\lib\\site-packages (from vertica-python) (1.16.0)\n",
+      "Requirement already satisfied: python-dateutil>=1.5 in d:\\anaconda3\\lib\\site-packages (from vertica-python) (2.8.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install vertica-python"
    ]
@@ -37,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "125"
+       "0"
       ]
      },
      "execution_count": 3,
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "332cb58d",
    "metadata": {},
    "outputs": [],
@@ -107,14 +118,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e79fb0d9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "d4525d5b",
    "metadata": {},
@@ -124,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "066fb956",
    "metadata": {},
    "outputs": [],
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "195c39b1",
    "metadata": {},
    "outputs": [],
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "f829e923",
    "metadata": {},
    "outputs": [],
@@ -164,43 +167,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "46f1093a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 1min 42s\n",
+      "Wall time: 1h 32min 53s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "step = 10000\n",
-    "count = 1_000_000 // step\n",
-    "for _ in range(count):\n",
-    "    with vertica_python.connect(**connection_info) as connection:\n",
-    "        cursor = connection.cursor()\n",
-    "        cursor.executemany(\"\"\"INSERT INTO movie_view (\n",
-    "                           user_uuid, movie_uuid, movie_progress, movie_length, event_time)\n",
-    "                           VALUES (?, ?, ?, ?, ?)\"\"\",\n",
-    "                           [next(movies_gen) for _ in range(step)],\n",
-    "                           use_prepared_statements=True) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcc4d234",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "count = 1000000 // step\n",
     "with vertica_python.connect(**connection_info) as connection:\n",
     "    cursor = connection.cursor()\n",
-    "    cursor.execute('SELECT COUNT(*) from movie_view')\n",
-    "    print(cursor.fetchall())"
+    "    for _ in range(count):\n",
+    "        cursor.executemany(\"\"\"\n",
+    "        INSERT INTO movie_view (user_uuid, movie_uuid, movie_progress, movie_length, event_time)\n",
+    "        VALUES (?, ?, ?, ?, ?)\n",
+    "        \"\"\",\n",
+    "        [next(movies_gen) for i in range(step)],\n",
+    "        use_prepared_statements=True) \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a4cc115",
+   "id": "896b0db0",
    "metadata": {},
    "source": [
-    "За час на одном потоке было загружено 60000 записей, дальнейшее тестирование считаю нецелесообразным в связи с тем что для нас скорость загрузки да"
+    "### Чтение данных из таблицы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fcc4d234",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1000000]]\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 24.2 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "with vertica_python.connect(**connection_info) as connection2:\n",
+    "    cursor2 = connection2.cursor()\n",
+    "    cursor2.execute('SELECT COUNT(*) from movie_view')\n",
+    "    print(cursor2.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6474f4fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1000]]\n",
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 162 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "with vertica_python.connect(**connection_info) as connection2:\n",
+    "    cursor2 = connection2.cursor()\n",
+    "    cursor2.execute('SELECT COUNT (DISTINCT movie_uuid) FROM movie_view')\n",
+    "    print(cursor2.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4cfbcea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2000]]\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 151 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "with vertica_python.connect(**connection_info) as connection2:\n",
+    "    cursor2 = connection2.cursor()\n",
+    "    cursor2.execute('SELECT COUNT (DISTINCT user_uuid) FROM movie_view')\n",
+    "    print(cursor2.fetchall())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "21fe30c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[176]]\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 45.7 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "with vertica_python.connect(**connection_info) as connection2:\n",
+    "    cursor2 = connection2.cursor()\n",
+    "    cursor2.execute('SELECT COUNT (DISTINCT movie_uuid) FROM movie_view WHERE movie_length = movie_progress')\n",
+    "    print(cursor2.fetchall())"
    ]
   }
  ],
@@ -220,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
