--- a/db_research/vertica/vertica.ipynb
+++ b/db_research/vertica/vertica.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "9c6ca980",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Устанавливаем и запускаем Vertica"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "d9a0d372",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -33,7 +41,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "edccd275",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import os"
@@ -43,7 +55,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b45d2a67",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -63,7 +79,11 @@
   {
    "cell_type": "markdown",
    "id": "4b3964ca",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Подключаемся к БД"
    ]
@@ -72,7 +92,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "f3b486e4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import vertica_python"
@@ -82,7 +106,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "a0cb5ebd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "connection_info = {\n",
@@ -98,7 +126,11 @@
   {
    "cell_type": "markdown",
    "id": "4867362d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Проводим Миграции"
    ]
@@ -107,7 +139,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "332cb58d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "with vertica_python.connect(**connection_info) as connection:\n",
@@ -120,7 +156,11 @@
   {
    "cell_type": "markdown",
    "id": "d4525d5b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Заполняем БД на 1 000 000 записей"
    ]
@@ -129,7 +169,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "066fb956",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -145,7 +189,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "195c39b1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "movie_uuids = [str(uuid.uuid4()) for _ in range(1000)]\n",
@@ -156,7 +204,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "f829e923",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "length = random.randint(600, 90000)\n",
@@ -169,7 +221,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "46f1093a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -198,7 +254,11 @@
   {
    "cell_type": "markdown",
    "id": "896b0db0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Чтение данных из таблицы"
    ]
@@ -207,7 +267,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "fcc4d234",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -231,7 +295,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "6474f4fc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -255,7 +323,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "4cfbcea3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -279,7 +351,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "21fe30c2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
