разделил иследования 8 и 9 спринтов, поправил тесты postgres, внес результаты и написал вывод.

--- a/db_research/rating_research/postgres/postgres.ipynb
+++ b/db_research/rating_research/postgres/postgres.ipynb
@@ -2,8 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0a948065",
+   "execution_count": null,
+   "id": "efaa87bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install psycopg2-binary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "757f45ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,21 +23,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "1200ad9e",
+   "execution_count": null,
+   "id": "18e2d056",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "db_username = 'postgres'\n",
     "db_password = '11111111'\n",
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "4370deb0",
    "metadata": {},
    "outputs": [],
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 15,
    "id": "69b34165",
    "metadata": {},
    "outputs": [],
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 13,
    "id": "8ff6e478",
    "metadata": {
     "scrolled": true
@@ -103,7 +102,16 @@
    "outputs": [],
    "source": [
     "connection = psycopg2.connect(**dsn)\n",
-    "cursor = conn.cursor()\n",
+    "cursor = connection.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b6b69b7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cursor.execute(create_tables)"
    ]
   },
@@ -117,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 17,
    "id": "7f0f08c7",
    "metadata": {},
    "outputs": [],
@@ -507,6 +515,38 @@
     "%%time\n",
     "cursor.execute(f\"SELECT AVG(rating) as avg_rating FROM rating WHERE movie_uuid = '{movie}';\")\n",
     "cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e143f606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uuid, user, movie, rating = uuid4(), uuid4(), uuid4(), random.randint(1, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3456ec21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 17 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "cursor.execute(f\"\"\"\n",
+    "INSERT INTO rating(id, user_uuid, movie_uuid, rating)\n",
+    "VALUES('{uuid}', '{user}', '{movie}', {rating})\"\"\")"
    ]
   }
  ],
