изменил способ загрузки данных в postgres

--- a/db_research/rating_research/postgres/postgres.ipynb
+++ b/db_research/rating_research/postgres/postgres.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "757f45ec",
    "metadata": {},
    "outputs": [],
@@ -23,10 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "18e2d056",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db_username = 'postgres'\n",
     "db_password = '11111111'\n",
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4370deb0",
    "metadata": {},
    "outputs": [],
@@ -58,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "69b34165",
    "metadata": {},
    "outputs": [],
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "8ff6e478",
    "metadata": {
     "scrolled": true
@@ -107,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "b6b69b7e",
    "metadata": {},
    "outputs": [],
@@ -125,19 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "7f0f08c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from uuid import uuid4\n",
     "import random\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from psycopg2.extras import execute_batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 15,
    "id": "a91ca84a",
    "metadata": {},
    "outputs": [],
@@ -148,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 16,
    "id": "452ba6ff",
    "metadata": {},
    "outputs": [],
@@ -167,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 17,
    "id": "b4c3a66c",
    "metadata": {},
    "outputs": [],
@@ -185,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 18,
    "id": "938f63a8",
    "metadata": {},
    "outputs": [
@@ -193,8 +205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 2min 17s\n",
-      "Wall time: 1h 25min 26s\n"
+      "CPU times: total: 24.3 s\n",
+      "Wall time: 3min 50s\n"
      ]
     }
    ],
@@ -203,16 +215,15 @@
     "insert_str = \"%s,\" * 6\n",
     "insert_str = insert_str[:-1]\n",
     "for data in review_data:\n",
-    "    cursor.executemany(f\"\"\"\n",
+    "    execute_batch(cursor, f\"\"\"\n",
     "    INSERT INTO review(user_uuid, movie_uuid, text_review, first_name, last_name, creation_date)\n",
     "    VALUES({insert_str})\n",
-    "    ON CONFLICT(user_uuid, movie_uuid) DO NOTHING;\"\"\", data)\n",
-    "    "
+    "    ON CONFLICT(user_uuid, movie_uuid) DO NOTHING;\"\"\", data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 19,
    "id": "b606345e",
    "metadata": {},
    "outputs": [
@@ -220,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1046476\n"
+      "1040852\n"
      ]
     }
    ],
@@ -232,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 20,
    "id": "fa593b68",
    "metadata": {},
    "outputs": [],
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 23,
    "id": "4a63a4e8",
    "metadata": {},
    "outputs": [
@@ -259,8 +270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4min 25s\n",
-      "Wall time: 1h 42min 26s\n"
+      "CPU times: total: 27.6 s\n",
+      "Wall time: 3min 22s\n"
      ]
     }
    ],
@@ -269,32 +280,31 @@
     "insert_str = \"%s,\" * 4\n",
     "insert_str = insert_str[:-1]\n",
     "for data in rating_movies:\n",
-    "    cursor.executemany(f\"\"\"\n",
+    "    execute_batch(cursor, f\"\"\"\n",
     "    INSERT INTO rating(id, user_uuid, movie_uuid, rating)\n",
     "    VALUES({insert_str})\n",
     "    ON CONFLICT(user_uuid, movie_uuid) DO NOTHING;\"\"\", data)\n",
     "\n",
     "for data in rating_reviews:\n",
-    "    cursor.executemany(f\"\"\"\n",
+    "    execute_batch(cursor, f\"\"\"\n",
     "    INSERT INTO rating(id, user_uuid, review_id, rating)\n",
     "    VALUES({insert_str})\n",
-    "    ON CONFLICT(user_uuid, review_id) DO NOTHING;\"\"\", data)\n",
-    "    "
+    "    ON CONFLICT(user_uuid, review_id) DO NOTHING;\"\"\", data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 24,
    "id": "c0525a4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1998724,)]"
+       "[(1998700,)]"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 25,
    "id": "e7e3a426",
    "metadata": {},
    "outputs": [],
@@ -324,25 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "id": "fabb6d7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 1min 31s\n",
-      "Wall time: 52min 2s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "insert_str = \"%s,\" * 3\n",
     "insert_str = insert_str[:-1]\n",
     "for data in bookmark_data:\n",
-    "    cursor.executemany(f\"\"\"\n",
+    "    execute_batch(cursor, f\"\"\"\n",
     "    INSERT INTO bookmark(id, user_uuid, movie_uuid)\n",
     "    VALUES({insert_str})\n",
     "    ON CONFLICT(user_uuid, movie_uuid) DO NOTHING;\"\"\", data)\n"
@@ -350,21 +351,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": null,
    "id": "a985a2e2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1049098,)]"
-      ]
-     },
-     "execution_count": 268,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cursor.execute('select count(*) from bookmark')\n",
     "cursor.fetchall()"
